added styles to about page

--- a/contact.html
+++ b/contact.html
@@ -12,24 +12,22 @@
 <body>
   <div class="navbar">
     <div class="nav-title">
-      <h1>Gerritt Black</h1>
-
+      <h1 class="heading">Contact</h1>
     </div>
     <div class="nav-links">
-      <ul>
-        <li><a href="/index.html">About</a></li>
-        <li><a href="/portfolio.html">Portfolio</a></li>
-        <li><a href="/contact.html">Contact</a></li>
-      </ul>
+      <a href="/index.html">About</a>
+      <a href="/portfolio.html">Portfolio</a>
+      <a href="/contact.html">Contact</a>
     </div>
   </div>
+
   <div class="contact-container">
-    <h3>Contact</h3>
+    <h3 class="heading">Contact</h3>
     <hr>
     <div class="contact-form">
-      <h4>Name</h4>
+      <h4 class="heading">Name</h4>
       <input type="text" name="" id="name-input" placeholder="Enter your name">
-      <h4>Email</h4>
+      <h4 class="heading">Email</h4>
       <input type="text" name="" id="email-input" placeholder="Enter a valid email">
       <h4>Message</h4>
       <input type="textarea" id="messgae-box" placeholder="Enter a message">
