--- a/index.html
+++ b/index.html
@@ -12,24 +12,22 @@
 <body>
   <div class="navbar">
     <div class="nav-title">
-      <h1>Gerritt Black</h1>
-
+      <h1 class="heading">Gerritt Black</h1>
     </div>
     <div class="nav-links">
-      <ul>
-        <li><a href="/index.html">About</a></li>
-        <li><a href="/portfolio.html">Portfolio</a></li>
-        <li><a href="/contact.html">Contact</a></li>
-      </ul>
+      <a href="/index.html">About</a>
+      <a href="/portfolio.html">Portfolio</a>
+      <a href="/contact.html">Contact</a>
     </div>
   </div>
+
   <div class="about-container">
     <div class="about-me">
       <div class="title-section">
-        <h3>About Me</h3>
+        <h3 class="heading">About Me</h3>
       </div>
       <hr />
-      <img src="#" alt="photo" />
+      <img src="/assets/css/images/photo.jpg" alt="photo" />
       <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque eum
         nemo quam voluptas asperiores. In modi consectetur eligendi, vitae
