--- a/portfolio.html
+++ b/portfolio.html
@@ -12,19 +12,16 @@
 <body>
     <div class="navbar">
         <div class="nav-title">
-            <h1>Gerritt Black</h1>
-
+            <h1 class="heading">Portfolio</h1>
         </div>
         <div class="nav-links">
-            <ul>
-                <li><a href="/index.html">About</a></li>
-                <li><a href="/portfolio.html">Portfolio</a></li>
-                <li><a href="/contact.html">Contact</a></li>
-            </ul>
+            <a href="/index.html">About</a>
+            <a href="/portfolio.html">Portfolio</a>
+            <a href="/contact.html">Contact</a>
         </div>
     </div>
     <div class="portfolio-container">
-        <h3>Portfolio</h3>
+        <h3 class="heading">Portfolio</h3>
         <hr>
         <div class="portfolio-images">
             <div class="image-1"><img src="#" alt="image"></div>
