--- a/index.html
+++ b/index.html
@@ -12,45 +12,52 @@
 <body>
   <div class="navbar">
     <div class="nav-title">
-      <h1 class="heading">Gerritt Black</h1>
+      <h1 class="heading" id="title">Gerritt Black</h1>
     </div>
     <div class="nav-links">
-      <a href="/index.html">About</a>
-      <a href="/portfolio.html">Portfolio</a>
-      <a href="/contact.html">Contact</a>
+      <a href="./index.html">About</a>
+      <a href="./portfolio.html">Portfolio</a>
+      <a href="./contact.html">Contact</a>
     </div>
   </div>
-
-  <div class="about-container">
-    <div class="about-me">
-      <div class="title-section">
-        <h3 class="heading">About Me</h3>
+  <div class="about-wrapper">
+    <div class="about-container">
+      <div class="about-me">
+        <div class="title-section">
+          <h3 class="heading">About Me</h3>
+        </div>
+        <hr />
+        <img src="/assets/css/images/photo.jpg" alt="photo" />
+        <p>
+          If I could be anyone in the world, who would I be? I would absolutely choose NOT to be the guy writing a bio
+          about himself right now. Let me switch gears and talk about my dog. I’m one of those big tall with a tiny
+          adorable dog. I can’t help it if I like adorable things! And let be honest, if you don’t like adorable things,
+          you are some kind monster that is well beyond reproach. My dog, his name is Django and he is a miniature
+          pinscher. He weighs 8 lbs (used to weigh 6, the little tubber), and he has quite the plethora of nicknames.
+          Rat, ratty, ratty cakes, rattems, doodles, princess, baby boy…you get the idea. In case you missed the point,
+          he looks like a rat. Only with long legs like a little rat-deer. And he always has a snaggle tooth hanging
+          out. I acquired him used, and I had to have 17 teeth pulled. Sometimes that free dog you get? Yeah, not so
+          free, after all.
+        </p>
+        <p>
+          I suppose there are other things about me than my dog, but it seemed like an adequate lead in. I also
+          enjoy(ish) writing and recording music from time to time. If you heard my music, which you probably won’t, you
+          would think that I never learned what a major key was. It’s fine. The somber sad sound suits me. There is a
+          cathartic element of writing sad songs that no one will ever hear about how broken you are. I find It easier
+          to keep myself honest that way.
+        </p>
+        <p>
+          I also fancy myself a film and music snob. Yes, I call them films. I have impeccable taste, and you won’t ever
+          convince me otherwise. Stubborn? Yes, quite. I think I’m finally getting to that age where it is hard to find
+          new music that I like. It’s rare, but I do still find new music that appeals to me. It’s a similar sensation
+          to being called for jury duty, and then never having your number called. OK, there may be a better analogy
+          that someone smarter than me could write, but I’m only capable of so much.
+        </p>
       </div>
-      <hr />
-      <img src="/assets/css/images/photo.jpg" alt="photo" />
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque eum
-        nemo quam voluptas asperiores. In modi consectetur eligendi, vitae
-        vero maxime praesentium. Illo omnis consectetur, quod optio impedit
-        labore fuga minus vel aliquid velit temporibus cumque dolore
-        aspernatur nemo ullam doloribus enim sed ea nesciunt iure doloremque.
-        Laborum, veniam reprehenderit!
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore harum,
-        nam saepe inventore nihil reprehenderit totam alias iusto nesciunt
-        deserunt necessitatibus? Iste deleniti illum cupiditate!
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores
-        nesciunt maxime hic repudiandae quia dolore possimus ipsam non ad,
-        placeat atque autem ipsum unde, error ullam soluta ab obcaecati
-        accusantium?
-      </p>
     </div>
-    <div class="footer">
-      <h5>copywright</h5>
-    </div>
+  </div>
+  <div class="footer-wrapper">
+    <h5 class="copywright">copywright</h5>
   </div>
 </body>
 
