--- a/index.html
+++ b/index.html
@@ -30,12 +30,13 @@
         <img src="/assets/css/images/photo.jpg" alt="photo" />
         <p>
           If I could be anyone in the world, who would I be? I would absolutely choose NOT to be the guy writing a bio
-          about himself right now. Let me switch gears and talk about my dog. I’m one of those big tall with a tiny
-          adorable dog. I can’t help it if I like adorable things! And let be honest, if you don’t like adorable things,
+          about himself right now. Let me switch gears and talk about my dog. I’m one of those big tall guys with a tiny
+          adorable dog. I can’t help it if I like adorable things! And lets be honest, if you don’t like adorable
+          things,
           you are some kind monster that is well beyond reproach. My dog, his name is Django and he is a miniature
           pinscher. He weighs 8 lbs (used to weigh 6, the little tubber), and he has quite the plethora of nicknames.
           Rat, ratty, ratty cakes, rattems, doodles, princess, baby boy…you get the idea. In case you missed the point,
-          he looks like a rat. Only with long legs like a little rat-deer. And he always has a snaggle tooth hanging
+          he looks like a rat. Only with long legs like a little rat-deer. And he always has a snaggle-tooth hanging
           out. I acquired him used, and I had to have 17 teeth pulled. Sometimes that free dog you get? Yeah, not so
           free, after all.
         </p>
