--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
 <body>
   <div class="navbar">
     <div class="nav-title">
-      <h1 class="heading">Contact</h1>
+      <h1 class="heading " id="title">Gerritt Black</h1>
     </div>
     <div class="nav-links">
       <a href="./index.html">About</a>
@@ -20,18 +20,20 @@
       <a href="./contact.html">Contact</a>
     </div>
   </div>
+  <div class="contact-wrapper">
+    <div class="contact-container">
+      <h3 class="heading">Contact</h3>
+      <hr>
+      <div class="contact-form">
+        <h4 class="form-heading">Name</h4>
+        <input type="text" name="" id="name-input" placeholder="Enter your name">
+        <h4 class="form-heading">Email</h4>
+        <input type="text" name="" id="email-input" placeholder="Enter a valid email">
+        <h4 class="form-heading">Message</h4>
 
-  <div class="contact-container">
-    <h3 class="heading">Contact</h3>
-    <hr>
-    <div class="contact-form">
-      <h4 class="heading">Name</h4>
-      <input type="text" name="" id="name-input" placeholder="Enter your name">
-      <h4 class="heading">Email</h4>
-      <input type="text" name="" id="email-input" placeholder="Enter a valid email">
-      <h4>Message</h4>
-      <input type="textarea" id="messgae-box" placeholder="Enter a message">
-      <button type="submit">Submit</button>
+        <textarea id="message-box" placeholder="Enter a message"></textarea>
+        <button type="submit">Submit</button>
+      </div>
     </div>
   </div>
 
