--- a/portfolio.html
+++ b/portfolio.html
@@ -12,7 +12,7 @@
 <body>
     <div class="navbar">
         <div class="nav-title">
-            <h1 class="heading">Portfolio</h1>
+            <h1 class="heading" id="title">Gerritt Black</h1>
         </div>
         <div class="nav-links">
             <a href="./index.html">About</a>
