added icons to title cards

--- a/index.html
+++ b/index.html
@@ -7,16 +7,18 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <title>About Me</title>
   <link rel="stylesheet" href="/assets/css/style.css" />
+  <script src="https://kit.fontawesome.com/67a77a59c8.js"></script>
 </head>
 
 <body>
   <div class="navbar">
     <div class="nav-title">
-      <h1 class="heading" id="title">Gerritt Black</h1>
+      <h1 class="heading" id="title"><span><i class="fas fa-laptop-code"></i></span> Gerritt Black</h1>
+
     </div>
     <div class="nav-links">
-      <a href="./index.html">About</a>
-      <a href="./portfolio.html">Portfolio</a>
+      <a href="./index.html">About |</a>
+      <a href="./portfolio.html">Portfolio |</a>
       <a href="./contact.html">Contact</a>
     </div>
   </div>
