--- a/portfolio.html
+++ b/portfolio.html
@@ -7,28 +7,31 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Portfolio</title>
     <link rel="stylesheet" href="/assets/css/style.css">
+    <script src="https://kit.fontawesome.com/67a77a59c8.js"></script>
 </head>
 
 <body>
     <div class="navbar">
         <div class="nav-title">
-            <h1 class="heading" id="title">Gerritt Black</h1>
+            <h1 class="heading" id="title"><span><i class="far fa-folder"></i></span> Gerritt Black</h1>
         </div>
         <div class="nav-links">
-            <a href="./index.html">About</a>
-            <a href="./portfolio.html">Portfolio</a>
-            <a href="./contact.html">Contact</a>
+            <a href="./index.html">About |</a>
+            <a href="./portfolio.html">Portfolio |</a>
+            <a href="./contact.html">Contact |</a>
         </div>
     </div>
-    <div class="portfolio-container">
-        <h3 class="heading">Portfolio</h3>
-        <hr>
-        <div class="portfolio-images">
-            <div class="image-1"><img src="#" alt="image"></div>
-            <div class="image-2"><img src="#" alt="image"></div>
-            <div class="image-3"><img src="#" alt="image"></div>
-            <div class="image-4"><img src="#" alt="image"></div>
-            <div class="image-5"><img src="#" alt="image"></div>
+    <div class="portfolio-wrapper">
+        <div class="portfolio-container">
+            <h3 class="heading">Portfolio</h3>
+            <hr>
+            <div class="portfolio-images">
+                <div class="image"><img src="./assets/css/images/pexels-photo-2516417.jpeg" alt="image"></div>
+                <div class="image"><img src="#" alt="image"></div>
+                <div class="image"><img src="#" alt="image"></div>
+                <div class="image"><img src="#" alt="image"></div>
+
+            </div>
         </div>
     </div>
 </body>
