added styling and photos to portfolio page

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <h3 class="heading">About Me</h3>
         </div>
         <hr />
-        <img src="/assets/css/images/photo.jpg" alt="photo" />
+        <img src="./assets/images/photo.jpg" alt="photo" class="about-image" />
         <p>
           If I could be anyone in the world, who would I be? I would absolutely choose NOT to be the guy writing a bio
           about himself right now. Let me switch gears and talk about my dog. I’m one of those big tall guys with a tiny
