--- a/portfolio.html
+++ b/portfolio.html
@@ -26,10 +26,27 @@
             <h3 class="heading">Portfolio</h3>
             <hr>
             <div class="portfolio-images">
-                <div class="image"><img src="./assets/css/images/pexels-photo-2516417.jpeg" alt="image"></div>
-                <div class="image"><img src="#" alt="image"></div>
-                <div class="image"><img src="#" alt="image"></div>
-                <div class="image"><img src="#" alt="image"></div>
+                <div class="image"><img src="./assets/images/pexels-photo-2516417.jpeg" alt="image">
+                </div>
+                <div class="image"><img src="./assets/images//pexels-photo-1804796.jpeg" alt="image"></div>
+                <div class="image"><img src="./assets/images/pexels-photo-2414043.jpeg" alt="image"></div>
+                <div class="image" id="image-4">
+                    <div class="photo-label">
+                        <p>something</p>
+                    </div>
+                </div>
+                <div class="image" id="image-5">
+                    <div class="photo-label">
+                        <p>something</p>
+                    </div>
+                </div>
+                <div class="image" id="image-6">
+                    <div class="photo-label">
+                        <p>something</p>
+                    </div>
+                </div>
+
+
 
             </div>
         </div>
