--- a/portfolio.html
+++ b/portfolio.html
@@ -26,10 +26,21 @@
             <h3 class="heading">Portfolio</h3>
             <hr>
             <div class="portfolio-images">
-                <div class="image"><img src="./assets/images/pexels-photo-2516417.jpeg" alt="image">
+                <div class="image" id="image-1">
+                    <div class="photo-label">
+                        <p>something</p>
+                    </div>
                 </div>
-                <div class="image"><img src="./assets/images//pexels-photo-1804796.jpeg" alt="image"></div>
-                <div class="image"><img src="./assets/images/pexels-photo-2414043.jpeg" alt="image"></div>
+                <div class="image" id="image-2">
+                    <div class="photo-label">
+                        <p>something</p>
+                    </div>
+                </div>
+                <div class="image" id="image-3">
+                    <div class="photo-label">
+                        <p>something</p>
+                    </div>
+                </div>
                 <div class="image" id="image-4">
                     <div class="photo-label">
                         <p>something</p>
@@ -45,11 +56,11 @@
                         <p>something</p>
                     </div>
                 </div>
-
-
-
             </div>
         </div>
+    </div>
+    <div class="footer-wrapper">
+        <h5 class="copywright">copywright</h5>
     </div>
 </body>
 
