--- a/contact.html
+++ b/contact.html
@@ -6,8 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Contact</title>
-  <link rel="stylesheet" href="/assets/css/style.css">
-  <link rel="stylesheet" href="/assets/css/style.css">
+  <link rel="stylesheet" href="./assets/css/style.css">
   <script src="https://kit.fontawesome.com/67a77a59c8.js"></script>
 </head>
 
@@ -39,12 +38,13 @@
     </div>
   </div>
   <div class="footer-wrapper">
-    <h5 class="copywright">copywright</h5>
+    <h5 class="copywright">copywright &copy</h5>
   </div>
 
 </body>
 <script>
   const submit = document.getElementById('submit')
+
   submit.addEventListener('click', () => {
     alert("Thank you for submitting this form. one day it may actually do something")
   })
