--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <title>About Me</title>
-  <link rel="stylesheet" href="/assets/css/style.css" />
+  <link rel="stylesheet" href="./assets/css/style.css" />
   <script src="https://kit.fontawesome.com/67a77a59c8.js"></script>
 </head>
 
@@ -60,7 +60,7 @@
     </div>
   </div>
   <div class="footer-wrapper">
-    <h5 class="copywright">copywright</h5>
+    <h5 class="copywright">copywright &copy</h5>
   </div>
 </body>
 
