--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,7 @@
         <div class="nav-links">
             <a href="./index.html">About |</a>
             <a href="./portfolio.html">Portfolio |</a>
-            <a href="./contact.html">Contact |</a>
+            <a href="./contact.html">Contact</a>
         </div>
     </div>
     <div class="portfolio-wrapper">
@@ -28,32 +28,32 @@
             <div class="portfolio-images">
                 <div class="image" id="image-1">
                     <div class="photo-label">
-                        <p>something</p>
+                        <p>Artsy Fartsy</p>
                     </div>
                 </div>
                 <div class="image" id="image-2">
                     <div class="photo-label">
-                        <p>something</p>
+                        <p>Elevator down</p>
                     </div>
                 </div>
                 <div class="image" id="image-3">
                     <div class="photo-label">
-                        <p>something</p>
+                        <p>Traffic Patterns</p>
                     </div>
                 </div>
                 <div class="image" id="image-4">
                     <div class="photo-label">
-                        <p>something</p>
+                        <p>Django</p>
                     </div>
                 </div>
                 <div class="image" id="image-5">
                     <div class="photo-label">
-                        <p>something</p>
+                        <p>Cloud 9</p>
                     </div>
                 </div>
                 <div class="image" id="image-6">
                     <div class="photo-label">
-                        <p>something</p>
+                        <p>Chowder</p>
                     </div>
                 </div>
             </div>
