--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Contact</title>
+  <title>&#934 Contact</title>
   <link rel="stylesheet" href="./assets/css/style.css">
   <script src="https://kit.fontawesome.com/67a77a59c8.js"></script>
 </head>
