added styling to links. added pipe separator

--- a/contact.html
+++ b/contact.html
@@ -16,15 +16,15 @@
       <h1 class="heading" id="title"><span><i class="fas fa-id-card"></i></span> Gerritt Black</h1>
     </div>
     <div class="nav-links">
-      <a href="./index.html">About |</a>
-      <a href="./portfolio.html">Portfolio |</a>
-      <a href="./contact.html">Contact</a>
+      <a class="pipe" href="./index.html">About</a>
+      <a class="pipe" href="./portfolio.html">Portfolio</a>
+      <a class="no-pipe" href="./contact.html">Contact</a>
     </div>
   </div>
   <div class="contact-wrapper">
     <div class="contact-container">
       <h3 class="heading">Contact</h3>
-      <hr>
+      <hr class="contact-hr">
       <div class="contact-form">
         <h4 class="form-heading">Name</h4>
         <input type="text" name="" id="name-input" placeholder="Enter your name">
