--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 
     </div>
     <div class="nav-links">
-      <a href="./index.html">About |</a>
-      <a href="./portfolio.html">Portfolio |</a>
-      <a href="./contact.html">Contact</a>
+      <a class="pipe" href="./index.html">About</a>
+      <a class="pipe" href="./portfolio.html">Portfolio</a>
+      <a class="no-pipe" href="./contact.html">Contact</a>
     </div>
   </div>
   <div class="about-wrapper">
@@ -28,7 +28,7 @@
         <div class="title-section">
           <h3 class="heading">About Me</h3>
         </div>
-        <hr />
+        <hr class="about-hr" />
         <img src="./assets/images/photo.jpg" alt="photo" class="about-image" />
         <p>
           If I could be anyone in the world, who would I be? I would absolutely choose NOT to be the guy writing a bio
