--- a/portfolio.html
+++ b/portfolio.html
@@ -16,15 +16,15 @@
             <h1 class="heading" id="title"><span><i class="far fa-folder"></i></span> Gerritt Black</h1>
         </div>
         <div class="nav-links">
-            <a href="./index.html">About |</a>
-            <a href="./portfolio.html">Portfolio |</a>
-            <a href="./contact.html">Contact</a>
+            <a class="pipe" href="./index.html">About</a>
+            <a class="pipe" href="./portfolio.html">Portfolio</a>
+            <a class="no-pipe" href="./contact.html">Contact</a>
         </div>
     </div>
     <div class="portfolio-wrapper">
         <div class="portfolio-container">
             <h3 class="heading">Portfolio</h3>
-            <hr>
+            <hr class="portfolio-hr">
             <div class="portfolio-images">
                 <div class="image" id="image-1">
                     <div class="photo-label">
