added navbar styling

--- a/index.html
+++ b/index.html
@@ -11,17 +11,38 @@
 </head>
 
 <body>
-  <div class="navbar">
-    <div class="nav-title">
-      <h1 class="heading" id="title"><span><i class="fas fa-laptop-code"></i></span> Gerritt Black</h1>
+  <div class="navbar-wrapper">
+    <div class="navbar-container">
+      <div class="nav-title">
+        <h1 class="heading" id="title"><span><i class="fas fa-laptop-code"></i></span> Gerritt Black</h1>
 
-    </div>
-    <div class="nav-links">
-      <a class="pipe" href="./index.html">About</a>
-      <a class="pipe" href="./portfolio.html">Portfolio</a>
-      <a class="no-pipe" href="./contact.html">Contact</a>
+      </div>
+      <div class="link-wrapper">
+        <div class="nav-links">
+          <a class="pipe" href="./index.html">About</a>
+          <a class="pipe" href="./portfolio.html">Portfolio</a>
+          <a class="no-pipe" href="./contact.html">Contact</a>
+        </div>
+
+      </div>
     </div>
   </div>
+  <!-- <div class="nav-wrapper">
+    <div class="nav-container">
+      <div class="left-wrapper heading">
+        Gerritt Black
+      </div>
+      <div class="right-wrapper">
+        <div class="link-container">
+          <div class="link">Home</div>
+          <div class="link link-bar">About</div>
+          <div class="link link-bar">Contact</div>
+        </div>
+      </div>
+    </div>
+    <div class="nav-bottom-border"></div>
+  </div> -->
+
   <div class="about-wrapper">
     <div class="about-container">
       <div class="about-me">
