--- a/portfolio.html
+++ b/portfolio.html
@@ -11,16 +11,23 @@
 </head>
 
 <body>
-    <div class="navbar">
-        <div class="nav-title">
-            <h1 class="heading" id="title"><span><i class="far fa-folder"></i></span> Gerritt Black</h1>
-        </div>
-        <div class="nav-links">
-            <a class="pipe" href="./index.html">About</a>
-            <a class="pipe" href="./portfolio.html">Portfolio</a>
-            <a class="no-pipe" href="./contact.html">Contact</a>
+    <div class="navbar-wrapper">
+        <div class="navbar-container">
+            <div class="nav-title">
+                <h1 class="heading" id="title"><span><i class="fas fa-laptop-code"></i></span> Gerritt Black</h1>
+
+            </div>
+            <div class="link-wrapper">
+                <div class="nav-links">
+                    <a class="pipe" href="./index.html">About</a>
+                    <a class="pipe" href="./portfolio.html">Portfolio</a>
+                    <a class="no-pipe" href="./contact.html">Contact</a>
+                </div>
+
+            </div>
         </div>
     </div>
+
     <div class="portfolio-wrapper">
         <div class="portfolio-container">
             <h3 class="heading">Portfolio</h3>
