fixed a typo. made navbar more responsive

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           about himself right now. Let me switch gears and talk about my dog. I’m one of those big tall guys with a tiny
           adorable dog. I can’t help it if I like adorable things! And lets be honest, if you don’t like adorable
           things,
-          you are some kind monster that is well beyond reproach. My dog, his name is Django and he is a miniature
+          you are some kind of monster that is well beyond reproach. My dog; his name is Django and he is a miniature
           pinscher. He weighs 8 lbs (used to weigh 6, the little tubber), and he has quite the plethora of nicknames.
           Rat, ratty, ratty cakes, rattems, doodles, princess, baby boy…you get the idea. In case you missed the point,
           he looks like a rat. Only with long legs like a little rat-deer. And he always has a snaggle-tooth hanging
@@ -67,7 +67,7 @@
           I suppose there are other things about me than my dog, but it seemed like an adequate lead in. I also
           enjoy(ish) writing and recording music from time to time. If you heard my music, which you probably won’t, you
           would think that I never learned what a major key was. It’s fine. The somber sad sound suits me. There is a
-          cathartic element of writing sad songs that no one will ever hear about how broken you are. I find It easier
+          cathartic element of writing sad songs that no one will ever hear, about how broken you are. I find It easier
           to keep myself honest that way.
         </p>
         <p>
