--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,7 @@
     <div class="navbar-wrapper">
         <div class="navbar-container">
             <div class="nav-title">
-                <h1 class="heading" id="title"><span><i class="fas fa-laptop-code"></i></span> Gerritt Black</h1>
+                <h1 class="heading" id="title"><span><i class="far fa-folder"></i></span> Gerritt Black</h1>
 
             </div>
             <div class="link-wrapper">
