affixed footer to page bottom

--- a/index.html
+++ b/index.html
@@ -27,21 +27,6 @@
       </div>
     </div>
   </div>
-  <!-- <div class="nav-wrapper">
-    <div class="nav-container">
-      <div class="left-wrapper heading">
-        Gerritt Black
-      </div>
-      <div class="right-wrapper">
-        <div class="link-container">
-          <div class="link">Home</div>
-          <div class="link link-bar">About</div>
-          <div class="link link-bar">Contact</div>
-        </div>
-      </div>
-    </div>
-    <div class="nav-bottom-border"></div>
-  </div> -->
 
   <div class="about-wrapper">
     <div class="about-container">
@@ -81,8 +66,10 @@
     </div>
   </div>
   <div class="footer-wrapper">
-    <h5 class="copywright">copywright &copy</h5>
-  </div>
+    <div class="footer-container">
+      <h5 class="copywright">copywright &copy</h5>
+    </div>
 </body>
+</div>
 
 </html>
