--- a/portfolio.html
+++ b/portfolio.html
@@ -67,8 +67,11 @@
         </div>
     </div>
     <div class="footer-wrapper">
-        <h5 class="copywright">copywright &copy</h5>
-    </div>
+        <div class="footer-container">
+            <h5 class="copywright">copywright &copy</h5>
+        </div>
+</body>
+</div>
 </body>
 
 </html>
