--- a/contact.html
+++ b/contact.html
@@ -45,8 +45,11 @@
     </div>
   </div>
   <div class="footer-wrapper">
-    <h5 class="copywright">copywright &copy</h5>
-  </div>
+    <div class="footer-container">
+      <h5 class="copywright">copywright &copy</h5>
+    </div>
+</body>
+</div>
 
 </body>
 <script>
